<resources>
    <string name="app_name">Gpcropcare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tally Admin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Switch Company</string>

    <string name="menu_home">Home</string>
    <string name="about">Shri Bhikabhai G.Patel, Managing Director of Gp Crop Care has having 30 Years Experience of Manufacturing  &amp; Marketing, Gujarat Pesticides (An ISO 9001:2008 CERTIFIED COMPANY) established in the year 1983 and manufacturing right from beginning. The company has Moto of "Service to Agriculture" with the Passion for quality and serving. Gp has a large in-house formulation Plant with fully automated and semi-automated lines for producing assorted products in HDPE, Pet,Polyester, Tin and Aluminium Packs.</string>
    <string name="appbar_scrolling_view_behavior" translatable="true">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="reject">Reject</string>
    <string name="aboutus">AboutUs</string>
    <string name="logout">Logout</string>
    <string name="from">From</string>
    <string name="date_select">From</string>
    <string name="date_select_to">To</string>
    <string name="noReportFound">No Record Found.</string>
    <string name="no_report">Try to search new Stock Item Name Or Swipe Down To Load More Reports.</string>

    <string name="search">Search Item</string>
    <string name="click_to_search">Click To Search</string>

    <string name="state">STATE</string>
    <string name="total">TOTAL</string>
    <!--ERROR MESSAGES-->
    <string name="netError">There is a problem with your network.</string>
    <string name="connError"> No internet connection. Check your internet connection. </string>
    <string name="parseError"> Error while parsing data. Try again. </string>
    <string name="serverError"> Problem connecting to a server. </string>
    <string name="authError"> Authentication failed. </string>
    <string name="timeOutError"> The application takes a long time to process. Try against in a few minutes. </string>
    <string name="ncr">NCR</string>
    <string name="rpl">RPL</string>
    <string name="opening">OPENING</string>
    <string name="closing">CLOSING</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="billing_rep">Billing Report</string>
    <string name="month_wise_statement_rep">Month Wise Statement</string>

</resources>
