<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <!--<item-->
            <!--android:id="@+id/request_auth"-->
            <!--android:icon="@drawable/ic_notifications_active_black_24dp"-->
            <!--android:title="Pending Request" />-->
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_tv_24"
            android:title="@string/aboutus" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />

    </group>

</menu>
