<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearTotal"
    android:layout_margin="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/backgroundnav"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textStart"
            android:layout_weight="20"
            android:text="MONTH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/opening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/debit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:text="@string/closing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textStart"
            android:layout_weight="20"
            android:text="@string/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalOpeningT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalDebtT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalCreditT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalClosingT"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:layout_weight="20"
            android:text="@string/ncr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrOpeningT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrDebtT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrCreditT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrClosingT"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:layout_weight="20"
            android:text="@string/rpl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplOpeningT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplDebtT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/rplCreditT"
            android:textAlignment="center"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/rplClosingT"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>