<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/backgroundnav"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aMonth"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="DECEMBER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textStart"
            android:layout_weight="20"
            android:text="MONTH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/opening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/debit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="@string/credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:text="@string/closing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:textAlignment="textStart"
            android:layout_weight="20"
            android:text="@string/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalOpening"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="215000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalDebt"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="75000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalCredit"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="50000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalClosing"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:text="240000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:layout_weight="20"
            android:text="@string/ncr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrOpening"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="20000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrDebt"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="65000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrCredit"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="45000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ncrClosing"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:text="40000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/stock_item_border"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_black"
            android:layout_weight="20"
            android:text="@string/rpl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplOpening"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="195000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplDebt"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="10000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplCredit"
            android:textAlignment="center"
            android:layout_weight="20"
            android:text="5000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rplClosing"
            android:textAlignment="textEnd"
            android:layout_weight="20"
            android:text="200000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>